[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "remusing_cpp"
dynamic = ["version"]
description = "Remove `using` declarations and refactor unqualified symbols in C++ code."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Eric Kilmer", email = "eric.d.kilmer@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["tree-sitter", "types-tree-sitter"]
requires-python = ">=3.8"

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
lint = [
    "black~=23.0",
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff < 0.0.259",
    "mypy >= 1.0",
    "interrogate",
]
dev = ["remusing_cpp[doc,test,lint]", "twine", "wheel", "build"]

[project.scripts]
"remusing_cpp" = "remusing_cpp._cli:main"

[project.urls]
Homepage = "https://github.com/ekilmer/remusing_cpp"
Issues = "https://github.com/ekilmer/remusing_cpp/issues"
Source = "https://github.com/ekilmer/remusing_cpp"

[tool.black]
line-length = 100

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = [
    "remusing_cpp/_cli.py",
    "remusing_cpp/__main__.py",
]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM"]
target-version = "py38"

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "remusing_cpp/_cli.py"]
ignore-semiprivate = true
fail-under = 100
